<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_purple">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/measurementsCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_measurements"
                android:textSize="20sp"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/editTextWaist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/waist_cm"
                android:layout_marginTop="12dp"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editTextHip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hip_cm"
                android:layout_marginTop="12dp"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editTextBiceps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/biceps_cm"
                android:layout_marginTop="12dp"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editTextLeg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/leg_cm"
                android:layout_marginTop="12dp"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/buttonSaveMeasurements"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:backgroundTint="@color/button_color2" />

                <Button
                    android:id="@+id/buttonDeleteMeasurements"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:padding="12dp"
                    android:backgroundTint="@color/button_color3" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
