<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextRegisterActivity"
    android:background="@drawable/purple_background">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_details"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewNextRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNextRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/editTextFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@id/editTextLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextBirthYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/birth_year"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@id/editTextBirthYear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@id/editTextHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Selector de género -->
            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/editTextWeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_marginEnd="8dp" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <!-- Botón para continuar con el registro -->
            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:backgroundTint="@color/button_color"
                app:layout_constraintTop_toBottomOf="@id/radioGroupGender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
