<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centralGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <!-- CardView para el perfil del usuario -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="@id/centralGuideline"
        app:layout_constraintBottom_toTopOf="@id/cardViewStats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/default_profile_picture"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/genderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/gymGoerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gym_goer"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView para las estadísticas del usuario (IMC, altura, peso) -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/cardViewProfile"
        app:layout_constraintBottom_toTopOf="@id/cardViewBodyMeasurements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center"
            android:weightSum="4">

            <TextView
                android:id="@+id/imcTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imc_format"
                android:gravity="center"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/height_format"
                android:gravity="center"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/weightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight_format"
                android:gravity="center"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/expandOptionsButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/purple_circcle"
                    android:src="@drawable/baseline_add_24" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- CardView para el registro de medidas corporales -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBodyMeasurements"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/cardViewStats"
        app:layout_constraintBottom_toBottomOf="@id/centralGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Título del CardView para medidas corporales -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/body_measurements"
                android:layout_marginBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:gravity="center" />

            <!-- Contenedor para medidas individuales -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <!-- Medida de la cintura -->
                <TextView
                    android:id="@+id/waistMeasurementTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/waist_measurement"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <!-- Medida de la cadera -->
                <TextView
                    android:id="@+id/hipMeasurementTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hip_measurement"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <!-- Medida del bíceps -->
                <TextView
                    android:id="@+id/bicepsMeasurementTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/biceps_measurement"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/legMeasurementTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/leg_measurement"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>


            <!-- Botón para actualizar medidas -->
            <Button
                android:id="@+id/updateMeasurementsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_measurements"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/button_color2" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
